--- a/my-project/.gitignore
+++ b/my-project/.gitignore
@@ -1,10 +1,10 @@
 .DS_Store
 node_modules/
 /dist/
-./src/components/buyFruits.vue
-./src/components/HelloWorld.vue
-./src/components/TodoList.vue
-./src/components/TodoList3123123.vue
+/buyFruits/
+/HelloWorld/
+/TodoList/
+/TodoList3123123/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
